syntax = "proto2";
package pgevent;
option go_package = "etop.vn/backend/pb/services/pgevent";

import "protoc-gen-swagger/options/annotations.proto";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all)                = false;
option (gogoproto.gogoproto_import)         = false;
option (gogoproto.goproto_enum_prefix_all)  = true;
option (gogoproto.goproto_getters_all)      = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all)             = false;
option (gogoproto.marshaler_all)            = false;
option (gogoproto.onlyone_all)              = false;
option (gogoproto.sizer_all)                = false;
option (gogoproto.testgen_all)              = false;
option (gogoproto.unmarshaler_all)          = false;
option (gogoproto.verbose_equal_all)        = false;

import "google/protobuf/timestamp.proto";
import "common/common.proto";

service MiscService {
    rpc VersionInfo(cm.Empty) returns (cm.VersionInfoResponse);
}

service EventService {
    rpc GenerateEvents(GenerateEventsRequest) returns (cm.Empty);
}

message GenerateEventsRequest {
    // Be careful, as invalid message can cause errors in other services!
    //
    // Format: `table:rid:op:id`
    // Example: `fulfillment:81460:INSERT:1052886332676874435`
    repeated string raw_events = 1;

    // Example: `{fulfillment:81460:INSERT:1052886332676874435,fulfillment:81461:UPDATE:1052886332676874435}`
    optional string raw_events_pg = 2 [(gogoproto.nullable)=false];

    // Control how many events are dispatched asynchronously as a group.
    // We don't want to dispatch too many events together.
    // Example: 100. Default: 0 - events are dispatched synchronously.
    optional int32 items_per_batch = 3 [(gogoproto.nullable)=false];
}
